punto4.output
Estado 20 conflictos: 4 reducción/reducción
Estado 77 conflictos: 3 desplazamiento/reducción
Estado 78 conflictos: 3 desplazamiento/reducción
Estado 79 conflictos: 3 desplazamiento/reducción
Estado 83 conflictos: 5 desplazamiento/reducción
Estado 84 conflictos: 5 desplazamiento/reducción
Estado 85 conflictos: 5 desplazamiento/reducción
Estado 86 conflictos: 5 desplazamiento/reducción
Estado 87 conflictos: 5 desplazamiento/reducción
Estado 96 conflictos: 2 reducción/reducción


Gramática

    0 $accept: linea $end

    1 linea: %empty
    2      | linea exp EOL

    3 exp: %empty
    4    | if explist elsif EIF
    5    | if explist elsif ELS explist EIF
    6    | for explist EFO
    7    | while explist EWH
    8    | asig

    9 explist: exp
   10        | explist EOL exp

   11 elsif: %empty
   12      | ELI bool THN explist
   13      | ELI bool THN elsif

   14 if: CIF bool THN

   15 for: FOR opr FIN opr FTO opr CDO

   16 while: WHI bool CDO

   17 asig: VAR IDE ASG tdato EVA
   18     | CST IDE ASG tdato ECS

   19 tdato: STR
   20      | CHA
   21      | bool
   22      | opr

   23 bool: TRU
   24     | FAL
   25     | IDE
   26     | opr MAY opr
   27     | STR MAY STR
   28     | CHA MAY CHA
   29     | opr MER opr
   30     | STR MER STR
   31     | CHA MER CHA
   32     | opr IGU opr
   33     | STR IGU STR
   34     | CHA IGU CHA
   35     | bool IGU bool
   36     | bool AND bool
   37     | bool COR bool
   38     | APS bool CPS

   39 opr: NUM
   40    | IDE
   41    | opr MAS opr
   42    | opr MEN opr
   43    | opr MUL opr
   44    | opr MOD opr
   45    | opr DIV opr
   46    | APS opr CPS


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    NUM (258) 39
    STR (259) 19 27 30 33
    CHA (260) 20 28 31 34
    TRU (261) 23
    FAL (262) 24
    VAR (263) 17
    EVA (264) 17
    CST (265) 18
    ECS (266) 18
    CIF (267) 14
    EIF (268) 4 5
    ELI (269) 12 13
    ELS (270) 5
    THN (271) 12 13 14
    FOR (272) 15
    EFO (273) 6
    FIN (274) 15
    FTO (275) 15
    WHI (276) 16
    CDO (277) 15 16
    EWH (278) 7
    AND (279) 36
    COR (280) 37
    IGU (281) 32 33 34 35
    MAY (282) 26 27 28
    MER (283) 29 30 31
    IDE (284) 17 18 25 40
    ASG (285) 17 18
    APS (286) 38 46
    CPS (287) 38 46
    MUL (288) 43
    DIV (289) 45
    MAS (290) 41
    MEN (291) 42
    MOD (292) 44
    EOL (293) 2 10


No terminales con las reglas donde aparecen

    $accept (39)
        on left: 0
    linea (40)
        on left: 1 2
        on right: 0 2
    exp (41)
        on left: 3 4 5 6 7 8
        on right: 2 9 10
    explist (42)
        on left: 9 10
        on right: 4 5 6 7 10 12
    elsif (43)
        on left: 11 12 13
        on right: 4 5 13
    if (44)
        on left: 14
        on right: 4 5
    for (45)
        on left: 15
        on right: 6
    while (46)
        on left: 16
        on right: 7
    asig (47)
        on left: 17 18
        on right: 8
    tdato (48)
        on left: 19 20 21 22
        on right: 17 18
    bool (49)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 12 13 14 16 21 35 36 37 38
    opr (50)
        on left: 39 40 41 42 43 44 45 46
        on right: 15 22 26 29 32 41 42 43 44 45 46


Estado 0

    0 $accept: • linea $end

    $default  reduce usando la regla 1 (linea)

    linea  ir al estado 1


Estado 1

    0 $accept: linea • $end
    2 linea: linea • exp EOL

    $end  desplazar e ir al estado 2
    VAR   desplazar e ir al estado 3
    CST   desplazar e ir al estado 4
    CIF   desplazar e ir al estado 5
    FOR   desplazar e ir al estado 6
    WHI   desplazar e ir al estado 7

    $default  reduce usando la regla 3 (exp)

    exp    ir al estado 8
    if     ir al estado 9
    for    ir al estado 10
    while  ir al estado 11
    asig   ir al estado 12


Estado 2

    0 $accept: linea $end •

    $default  aceptar


Estado 3

   17 asig: VAR • IDE ASG tdato EVA

    IDE  desplazar e ir al estado 13


Estado 4

   18 asig: CST • IDE ASG tdato ECS

    IDE  desplazar e ir al estado 14


Estado 5

   14 if: CIF • bool THN

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 22
    opr   ir al estado 23


Estado 6

   15 for: FOR • opr FIN opr FTO opr CDO

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 26


Estado 7

   16 while: WHI • bool CDO

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 27
    opr   ir al estado 23


Estado 8

    2 linea: linea exp • EOL

    EOL  desplazar e ir al estado 28


Estado 9

    4 exp: if • explist elsif EIF
    5    | if • explist elsif ELS explist EIF

    VAR  desplazar e ir al estado 3
    CST  desplazar e ir al estado 4
    CIF  desplazar e ir al estado 5
    FOR  desplazar e ir al estado 6
    WHI  desplazar e ir al estado 7

    $default  reduce usando la regla 3 (exp)

    exp      ir al estado 29
    explist  ir al estado 30
    if       ir al estado 9
    for      ir al estado 10
    while    ir al estado 11
    asig     ir al estado 12


Estado 10

    6 exp: for • explist EFO

    VAR  desplazar e ir al estado 3
    CST  desplazar e ir al estado 4
    CIF  desplazar e ir al estado 5
    FOR  desplazar e ir al estado 6
    WHI  desplazar e ir al estado 7

    $default  reduce usando la regla 3 (exp)

    exp      ir al estado 29
    explist  ir al estado 31
    if       ir al estado 9
    for      ir al estado 10
    while    ir al estado 11
    asig     ir al estado 12


Estado 11

    7 exp: while • explist EWH

    VAR  desplazar e ir al estado 3
    CST  desplazar e ir al estado 4
    CIF  desplazar e ir al estado 5
    FOR  desplazar e ir al estado 6
    WHI  desplazar e ir al estado 7

    $default  reduce usando la regla 3 (exp)

    exp      ir al estado 29
    explist  ir al estado 32
    if       ir al estado 9
    for      ir al estado 10
    while    ir al estado 11
    asig     ir al estado 12


Estado 12

    8 exp: asig •

    $default  reduce usando la regla 8 (exp)


Estado 13

   17 asig: VAR IDE • ASG tdato EVA

    ASG  desplazar e ir al estado 33


Estado 14

   18 asig: CST IDE • ASG tdato ECS

    ASG  desplazar e ir al estado 34


Estado 15

   39 opr: NUM •

    $default  reduce usando la regla 39 (opr)


Estado 16

   27 bool: STR • MAY STR
   30     | STR • MER STR
   33     | STR • IGU STR

    IGU  desplazar e ir al estado 35
    MAY  desplazar e ir al estado 36
    MER  desplazar e ir al estado 37


Estado 17

   28 bool: CHA • MAY CHA
   31     | CHA • MER CHA
   34     | CHA • IGU CHA

    IGU  desplazar e ir al estado 38
    MAY  desplazar e ir al estado 39
    MER  desplazar e ir al estado 40


Estado 18

   23 bool: TRU •

    $default  reduce usando la regla 23 (bool)


Estado 19

   24 bool: FAL •

    $default  reduce usando la regla 24 (bool)


Estado 20

   25 bool: IDE •
   40 opr: IDE •

    EVA       reduce usando la regla 25 (bool)
    EVA       [reduce usando la regla 40 (opr)]
    ECS       reduce usando la regla 25 (bool)
    ECS       [reduce usando la regla 40 (opr)]
    IGU       reduce usando la regla 25 (bool)
    IGU       [reduce usando la regla 40 (opr)]
    MAY       reduce usando la regla 40 (opr)
    MER       reduce usando la regla 40 (opr)
    CPS       reduce usando la regla 25 (bool)
    CPS       [reduce usando la regla 40 (opr)]
    MUL       reduce usando la regla 40 (opr)
    DIV       reduce usando la regla 40 (opr)
    MAS       reduce usando la regla 40 (opr)
    MEN       reduce usando la regla 40 (opr)
    MOD       reduce usando la regla 40 (opr)
    $default  reduce usando la regla 25 (bool)


Estado 21

   38 bool: APS • bool CPS
   46 opr: APS • opr CPS

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 41
    opr   ir al estado 42


Estado 22

   14 if: CIF bool • THN
   35 bool: bool • IGU bool
   36     | bool • AND bool
   37     | bool • COR bool

    THN  desplazar e ir al estado 43
    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46


Estado 23

   26 bool: opr • MAY opr
   29     | opr • MER opr
   32     | opr • IGU opr
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    IGU  desplazar e ir al estado 47
    MAY  desplazar e ir al estado 48
    MER  desplazar e ir al estado 49
    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54


Estado 24

   40 opr: IDE •

    $default  reduce usando la regla 40 (opr)


Estado 25

   46 opr: APS • opr CPS

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 55


Estado 26

   15 for: FOR opr • FIN opr FTO opr CDO
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    FIN  desplazar e ir al estado 56
    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54


Estado 27

   16 while: WHI bool • CDO
   35 bool: bool • IGU bool
   36     | bool • AND bool
   37     | bool • COR bool

    CDO  desplazar e ir al estado 57
    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46


Estado 28

    2 linea: linea exp EOL •

    $default  reduce usando la regla 2 (linea)


Estado 29

    9 explist: exp •

    $default  reduce usando la regla 9 (explist)


Estado 30

    4 exp: if explist • elsif EIF
    5    | if explist • elsif ELS explist EIF
   10 explist: explist • EOL exp

    ELI  desplazar e ir al estado 58
    EOL  desplazar e ir al estado 59

    $default  reduce usando la regla 11 (elsif)

    elsif  ir al estado 60


Estado 31

    6 exp: for explist • EFO
   10 explist: explist • EOL exp

    EFO  desplazar e ir al estado 61
    EOL  desplazar e ir al estado 59


Estado 32

    7 exp: while explist • EWH
   10 explist: explist • EOL exp

    EWH  desplazar e ir al estado 62
    EOL  desplazar e ir al estado 59


Estado 33

   17 asig: VAR IDE ASG • tdato EVA

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 63
    CHA  desplazar e ir al estado 64
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    tdato  ir al estado 65
    bool   ir al estado 66
    opr    ir al estado 67


Estado 34

   18 asig: CST IDE ASG • tdato ECS

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 63
    CHA  desplazar e ir al estado 64
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    tdato  ir al estado 68
    bool   ir al estado 66
    opr    ir al estado 67


Estado 35

   33 bool: STR IGU • STR

    STR  desplazar e ir al estado 69


Estado 36

   27 bool: STR MAY • STR

    STR  desplazar e ir al estado 70


Estado 37

   30 bool: STR MER • STR

    STR  desplazar e ir al estado 71


Estado 38

   34 bool: CHA IGU • CHA

    CHA  desplazar e ir al estado 72


Estado 39

   28 bool: CHA MAY • CHA

    CHA  desplazar e ir al estado 73


Estado 40

   31 bool: CHA MER • CHA

    CHA  desplazar e ir al estado 74


Estado 41

   35 bool: bool • IGU bool
   36     | bool • AND bool
   37     | bool • COR bool
   38     | APS bool • CPS

    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46
    CPS  desplazar e ir al estado 75


Estado 42

   26 bool: opr • MAY opr
   29     | opr • MER opr
   32     | opr • IGU opr
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr
   46    | APS opr • CPS

    IGU  desplazar e ir al estado 47
    MAY  desplazar e ir al estado 48
    MER  desplazar e ir al estado 49
    CPS  desplazar e ir al estado 76
    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54


Estado 43

   14 if: CIF bool THN •

    $default  reduce usando la regla 14 (if)


Estado 44

   36 bool: bool AND • bool

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 77
    opr   ir al estado 23


Estado 45

   37 bool: bool COR • bool

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 78
    opr   ir al estado 23


Estado 46

   35 bool: bool IGU • bool

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 79
    opr   ir al estado 23


Estado 47

   32 bool: opr IGU • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 80


Estado 48

   26 bool: opr MAY • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 81


Estado 49

   29 bool: opr MER • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 82


Estado 50

   43 opr: opr MUL • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 83


Estado 51

   45 opr: opr DIV • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 84


Estado 52

   41 opr: opr MAS • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 85


Estado 53

   42 opr: opr MEN • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 86


Estado 54

   44 opr: opr MOD • opr

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 87


Estado 55

   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr
   46    | APS opr • CPS

    CPS  desplazar e ir al estado 76
    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54


Estado 56

   15 for: FOR opr FIN • opr FTO opr CDO

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 88


Estado 57

   16 while: WHI bool CDO •

    $default  reduce usando la regla 16 (while)


Estado 58

   12 elsif: ELI • bool THN explist
   13      | ELI • bool THN elsif

    NUM  desplazar e ir al estado 15
    STR  desplazar e ir al estado 16
    CHA  desplazar e ir al estado 17
    TRU  desplazar e ir al estado 18
    FAL  desplazar e ir al estado 19
    IDE  desplazar e ir al estado 20
    APS  desplazar e ir al estado 21

    bool  ir al estado 89
    opr   ir al estado 23


Estado 59

   10 explist: explist EOL • exp

    VAR  desplazar e ir al estado 3
    CST  desplazar e ir al estado 4
    CIF  desplazar e ir al estado 5
    FOR  desplazar e ir al estado 6
    WHI  desplazar e ir al estado 7

    $default  reduce usando la regla 3 (exp)

    exp    ir al estado 90
    if     ir al estado 9
    for    ir al estado 10
    while  ir al estado 11
    asig   ir al estado 12


Estado 60

    4 exp: if explist elsif • EIF
    5    | if explist elsif • ELS explist EIF

    EIF  desplazar e ir al estado 91
    ELS  desplazar e ir al estado 92


Estado 61

    6 exp: for explist EFO •

    $default  reduce usando la regla 6 (exp)


Estado 62

    7 exp: while explist EWH •

    $default  reduce usando la regla 7 (exp)


Estado 63

   19 tdato: STR •
   27 bool: STR • MAY STR
   30     | STR • MER STR
   33     | STR • IGU STR

    IGU  desplazar e ir al estado 35
    MAY  desplazar e ir al estado 36
    MER  desplazar e ir al estado 37

    $default  reduce usando la regla 19 (tdato)


Estado 64

   20 tdato: CHA •
   28 bool: CHA • MAY CHA
   31     | CHA • MER CHA
   34     | CHA • IGU CHA

    IGU  desplazar e ir al estado 38
    MAY  desplazar e ir al estado 39
    MER  desplazar e ir al estado 40

    $default  reduce usando la regla 20 (tdato)


Estado 65

   17 asig: VAR IDE ASG tdato • EVA

    EVA  desplazar e ir al estado 93


Estado 66

   21 tdato: bool •
   35 bool: bool • IGU bool
   36     | bool • AND bool
   37     | bool • COR bool

    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46

    $default  reduce usando la regla 21 (tdato)


Estado 67

   22 tdato: opr •
   26 bool: opr • MAY opr
   29     | opr • MER opr
   32     | opr • IGU opr
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    IGU  desplazar e ir al estado 47
    MAY  desplazar e ir al estado 48
    MER  desplazar e ir al estado 49
    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    $default  reduce usando la regla 22 (tdato)


Estado 68

   18 asig: CST IDE ASG tdato • ECS

    ECS  desplazar e ir al estado 94


Estado 69

   33 bool: STR IGU STR •

    $default  reduce usando la regla 33 (bool)


Estado 70

   27 bool: STR MAY STR •

    $default  reduce usando la regla 27 (bool)


Estado 71

   30 bool: STR MER STR •

    $default  reduce usando la regla 30 (bool)


Estado 72

   34 bool: CHA IGU CHA •

    $default  reduce usando la regla 34 (bool)


Estado 73

   28 bool: CHA MAY CHA •

    $default  reduce usando la regla 28 (bool)


Estado 74

   31 bool: CHA MER CHA •

    $default  reduce usando la regla 31 (bool)


Estado 75

   38 bool: APS bool CPS •

    $default  reduce usando la regla 38 (bool)


Estado 76

   46 opr: APS opr CPS •

    $default  reduce usando la regla 46 (opr)


Estado 77

   35 bool: bool • IGU bool
   36     | bool • AND bool
   36     | bool AND bool •
   37     | bool • COR bool

    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46

    AND       [reduce usando la regla 36 (bool)]
    COR       [reduce usando la regla 36 (bool)]
    IGU       [reduce usando la regla 36 (bool)]
    $default  reduce usando la regla 36 (bool)


Estado 78

   35 bool: bool • IGU bool
   36     | bool • AND bool
   37     | bool • COR bool
   37     | bool COR bool •

    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46

    AND       [reduce usando la regla 37 (bool)]
    COR       [reduce usando la regla 37 (bool)]
    IGU       [reduce usando la regla 37 (bool)]
    $default  reduce usando la regla 37 (bool)


Estado 79

   35 bool: bool • IGU bool
   35     | bool IGU bool •
   36     | bool • AND bool
   37     | bool • COR bool

    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46

    AND       [reduce usando la regla 35 (bool)]
    COR       [reduce usando la regla 35 (bool)]
    IGU       [reduce usando la regla 35 (bool)]
    $default  reduce usando la regla 35 (bool)


Estado 80

   32 bool: opr IGU opr •
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    $default  reduce usando la regla 32 (bool)


Estado 81

   26 bool: opr MAY opr •
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    $default  reduce usando la regla 26 (bool)


Estado 82

   29 bool: opr MER opr •
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    $default  reduce usando la regla 29 (bool)


Estado 83

   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   43    | opr MUL opr •
   44    | opr • MOD opr
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    MUL       [reduce usando la regla 43 (opr)]
    DIV       [reduce usando la regla 43 (opr)]
    MAS       [reduce usando la regla 43 (opr)]
    MEN       [reduce usando la regla 43 (opr)]
    MOD       [reduce usando la regla 43 (opr)]
    $default  reduce usando la regla 43 (opr)


Estado 84

   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr
   45    | opr DIV opr •

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    MUL       [reduce usando la regla 45 (opr)]
    DIV       [reduce usando la regla 45 (opr)]
    MAS       [reduce usando la regla 45 (opr)]
    MEN       [reduce usando la regla 45 (opr)]
    MOD       [reduce usando la regla 45 (opr)]
    $default  reduce usando la regla 45 (opr)


Estado 85

   41 opr: opr • MAS opr
   41    | opr MAS opr •
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    MUL       [reduce usando la regla 41 (opr)]
    DIV       [reduce usando la regla 41 (opr)]
    MAS       [reduce usando la regla 41 (opr)]
    MEN       [reduce usando la regla 41 (opr)]
    MOD       [reduce usando la regla 41 (opr)]
    $default  reduce usando la regla 41 (opr)


Estado 86

   41 opr: opr • MAS opr
   42    | opr • MEN opr
   42    | opr MEN opr •
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    MUL       [reduce usando la regla 42 (opr)]
    DIV       [reduce usando la regla 42 (opr)]
    MAS       [reduce usando la regla 42 (opr)]
    MEN       [reduce usando la regla 42 (opr)]
    MOD       [reduce usando la regla 42 (opr)]
    $default  reduce usando la regla 42 (opr)


Estado 87

   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   44    | opr MOD opr •
   45    | opr • DIV opr

    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54

    MUL       [reduce usando la regla 44 (opr)]
    DIV       [reduce usando la regla 44 (opr)]
    MAS       [reduce usando la regla 44 (opr)]
    MEN       [reduce usando la regla 44 (opr)]
    MOD       [reduce usando la regla 44 (opr)]
    $default  reduce usando la regla 44 (opr)


Estado 88

   15 for: FOR opr FIN opr • FTO opr CDO
   41 opr: opr • MAS opr
   42    | opr • MEN opr
   43    | opr • MUL opr
   44    | opr • MOD opr
   45    | opr • DIV opr

    FTO  desplazar e ir al estado 95
    MUL  desplazar e ir al estado 50
    DIV  desplazar e ir al estado 51
    MAS  desplazar e ir al estado 52
    MEN  desplazar e ir al estado 53
    MOD  desplazar e ir al estado 54


Estado 89

   12 elsif: ELI bool • THN explist
   13      | ELI bool • THN elsif
   35 bool: bool • IGU bool
   36     | bool • AND bool
   37     | bool • COR bool

    THN  desplazar e ir al estado 96
    AND  desplazar e ir al estado 44
    COR  desplazar e ir al estado 45
    IGU  desplazar e ir al estado 46


Estado 90

   10 explist: explist EOL exp •

    $default  reduce usando la regla 10 (explist)


Estado 91

    4 exp: if explist elsif EIF •

    $default  reduce usando la regla 4 (exp)


Estado 92

    5 exp: if explist elsif ELS • explist EIF

    VAR  desplazar e ir al estado 3
    CST  desplazar e ir al estado 4
    CIF  desplazar e ir al estado 5
    FOR  desplazar e ir al estado 6
    WHI  desplazar e ir al estado 7

    $default  reduce usando la regla 3 (exp)

    exp      ir al estado 29
    explist  ir al estado 97
    if       ir al estado 9
    for      ir al estado 10
    while    ir al estado 11
    asig     ir al estado 12


Estado 93

   17 asig: VAR IDE ASG tdato EVA •

    $default  reduce usando la regla 17 (asig)


Estado 94

   18 asig: CST IDE ASG tdato ECS •

    $default  reduce usando la regla 18 (asig)


Estado 95

   15 for: FOR opr FIN opr FTO • opr CDO

    NUM  desplazar e ir al estado 15
    IDE  desplazar e ir al estado 24
    APS  desplazar e ir al estado 25

    opr  ir al estado 98


Estado 96

   12 elsif: ELI bool THN • explist
   13      | ELI bool THN • elsif

    VAR  desplazar e ir al estado 3
    CST  desplazar e ir al estado 4
    CIF  desplazar e ir al estado 5
    ELI  desplazar e ir al estado 58
    FOR  desplazar e ir al estado 6
    WHI  desplazar e ir al estado 7
